--- a/source/layout/home_layout.html
+++ b/source/layout/home_layout.html
@@ -19,5 +19,6 @@
   <footer class="app-footer">
     this is footer
   </footer>
+  <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
